# email-intel

./: .gitignore  README.md
.github/workflows/: release.yml  update-domains.yml
data/: disposable.json
go/: README.md  emailintel.go  go.mod  mailverify.go
go/cmd/email-intel/: main.go
js/: README.md  package-lock.json  package.json  tsconfig.json
js/src/: cli.ts  dns.ts  index.ts
python/: README.md  pyproject.toml
python/src/email_intel/: __init__.py  cli.py
scripts/: update_domains.js
site/: tsconfig.json
site/src/components/: SponsorModal.tsx
site/src/pages/: index.tsx
